--- a/note_app/src/App.css
+++ b/note_app/src/App.css
@@ -1,31 +1,14 @@
-.App {
-  text-align: center;
+.header__button{
+  border : 1px solid gray;
+  border-radius: 10px;
+  padding: 5px 8px;
+}
+.header__button:hover{
+  background-color: #ddd;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+.selected{
+  background-color:#ddd;
 }
 
 @keyframes App-logo-spin {
