created board and settings components

--- a/memory_app/src/components/Settings/Settings.scss
+++ b/memory_app/src/components/Settings/Settings.scss
@@ -1,7 +1,7 @@
 .settings{
 
     width: 700px;
-    height: 500px;
+    height: 550px;
     margin-top: 30px;
     padding: 20px 30px;
     background-color: #18191A;
@@ -18,7 +18,7 @@
         font-weight: 600;
         // color: #fff;
         color: #716f6f;;
-
+        margin-top: 10px;
         margin-bottom: 20px;
         
     }
